--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="home.html" style="color: white;">Home</a>
+                <a class="nav-link" href="index.html" style="color: white;">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html" style="color: white;">My Projects</a>
