--- a/form.html
+++ b/form.html
@@ -8,6 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <style>
+      body {
+        font-family: "Fira Code", sans-serif;
+      }
+
+      #current{
+        border-bottom: 0.5rem; 
+        border-color: white; 
+        border-style: outset;
+      }
+    </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm" style="background-color: black;">
@@ -23,12 +34,12 @@
             <a class="nav-link" href="resume.html" style="color: white;">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="form.html" style="color: white;">Contact Me</a>
+            <a class="nav-link" href="form.html" style="color: white;" id="current">Contact Me</a>
           </li>
         </ul>
     </div>
   </nav>
-    <form style="margin: 30vh"> 
+    <form style="margin: 25vh"> 
         <div class="mb-3">
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
         </div>
@@ -39,8 +50,10 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Subject">
         </div>
         <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
-        <button type="submit" class="btn btn-success" style="margin-top: 2vh;">Contact Me</button><br>
+        <button type="submit" class="btn" style="margin-top: 2vh; background-color: black; color: white;">Contact Me</button><br>
       </form>
+
+
       <footer class="text-center text-white" style="background-color: black;">
         <!-- Grid container -->
         <div class="container pt-4">
