--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira Code">
+    <style>
+      body {
+        font-family: "Fira Code", sans-serif;
+      }
 
+      #current{
+        border-bottom: 0.5rem; 
+        border-color: white; 
+        border-style: outset;
+      }
+      .p{
+        margin: 5vh;
+      }
+
+      p{
+        font-size: larger;
+      }
+    </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm" style="background-color: black;">
@@ -18,7 +36,7 @@
             <a class="nav-link" href="index.html" style="color: white;">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects.html" style="color: white;">My Projects</a>
+            <a class="nav-link" href="projects.html" style="color: white;" id="current">My Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.html" style="color: white;">Resume</a>
@@ -29,8 +47,9 @@
         </ul>
     </div>
   </nav>
-      <section style="margin: 5vh;">
-        <h1>
+      <section style="margin: 5vh; margin-bottom: 10vh; margin-top: 10vh;">
+        <div class="p">
+          <h1>
             RŌZ
         </h1>
         <p>
@@ -48,38 +67,50 @@
             - Using Azure and its services such as Azure Virtual Machine to host our model send and receive data and using 
             Azure deployment services such as Azure Mobile App Services
         </p>
-        <h1>
-            BloxStaking.com GoerliETH Faucet 
-        </h1>
-        <p>
-            - Development, deployment, and maintenance of an automated GoerliETH Faucet to enable the rapid growth of the SSV.network incentivized test net 
-            <br>
-            - With built in automated verification and tracking of user limits with a volatile Redis based cache employing etherscan API and web3.
-            <br>
-            - Developed in partnership and under the guidance of BloxStaking.com one of the largest staking platforms in the world.
-        </p>
-        <h1>
-            WeTradeDaily BEP20 Custom Token Distribution Bot
-        </h1>
-        <p>
-           - Custom testnet token developed using the BEP20 standard and deployed on the Binance Smart Chain
-           <br>
-           - Developed for WeTradeDaily one of India's largest cryptocurrency trading prediction and trading training schools
-           <br>
-            - Currently in use on WeTradeDailys Discord Server as a testnet currency to teach trading basics
-            <br> 
-            - Developed using web3.js, Truffle and Solidity
-        </p>
-        <h1>
-            DeepLearning.AI Neural Networks Image Detection Project
-        </h1>
-        <p>
-            - Built a neural network model from the ground up which employs logistal regression for image classification
-            <br>
-            - Achieved 96%  prediction accuracy on unseen image classification
+        </div>
 
-        </p>
-        <h1>
+        <div class="p">
+            <h1>
+              BloxStaking.com GoerliETH Faucet 
+            </h1>
+            <p>
+                - Development, deployment, and maintenance of an automated GoerliETH Faucet to enable the rapid growth of the SSV.network incentivized test net 
+                <br>
+                - With built in automated verification and tracking of user limits with a volatile Redis based cache employing etherscan API and web3.
+                <br>
+                - Developed in partnership and under the guidance of BloxStaking.com one of the largest staking platforms in the world.
+            </p>
+        </div>
+
+        <div class="p">
+            <h1>
+              WeTradeDaily BEP20 Custom Token Distribution Bot
+          </h1>
+          <p>
+            - Custom testnet token developed using the BEP20 standard and deployed on the Binance Smart Chain
+            <br>
+            - Developed for WeTradeDaily one of India's largest cryptocurrency trading prediction and trading training schools
+            <br>
+              - Currently in use on WeTradeDailys Discord Server as a testnet currency to teach trading basics
+              <br> 
+              - Developed using web3.js, Truffle and Solidity
+          </p>
+        </div>
+
+        <div class="p">
+          <h1>
+            DeepLearning.AI Neural Networks Image Detection Project
+          </h1>
+          <p>
+              - Built a neural network model from the ground up which employs logistal regression for image classification
+              <br>
+              - Achieved 96%  prediction accuracy on unseen image classification
+
+          </p>
+        </div>
+
+        <div class="p">
+          <h1>
             Data Model to Predict the Perceptions Surrounding Online Learning
         </h1>
         <p>
@@ -94,7 +125,9 @@
             <br>
             - Gauged perceptions to weigh in on the future of online learning in a post pandemic Pakistan.
         </p>
+        </div>
       </section>
+
       <footer class="text-center text-white" style="background-color: black;">
         <!-- Grid container -->
         <div class="container pt-4">
