--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira Code">
+    <style>
+      body {
+        font-family: "Fira Code", sans-serif;
+      }
+      #current{
+        border-bottom: 0.5rem; 
+        border-color: white; 
+        border-style: outset;
+      }
+    </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm" style="background-color: black;">
@@ -20,7 +31,7 @@
             <a class="nav-link" href="projects.html" style="color: white;">My Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="resume.html" style="color: white;">Resume</a>
+            <a class="nav-link" href="resume.html" style="color: white;" id="current">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="form.html" style="color: white;">Contact Me</a>
