Swapped div for span

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
               Hi,
             </div>
             <div style="font-size: 8vh;">
-              <div style="white-space: nowrap;">
+              <span style="white-space: nowrap;">
                 I'm
-              </div>
-              <div style="display: inline; color: #007FFF ;">
+              </span>
+              <span style="display: inline; color: #007FFF ;">
                 Hamza Asaad
-              </div>
+              </span>
             </div>
             <div style="font-size: 6vh;">
               Bachelor of Computer Science
