Updated forms and fixed bg

--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,7 @@
     <style>
       body {
         font-family: "Fira Code", sans-serif;
+        background-color: black;
       }
       #current{
         border-bottom: 0.5rem; 
