--- a/form.html
+++ b/form.html
@@ -21,38 +21,38 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm" style="background-color: black;">
-    <div class="container-fluid">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html" style="color: white;">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html" style="color: white;">My Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="resume.html" style="color: white;">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="form.html" style="color: white;" id="current">Contact Me</a>
-          </li>
-        </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-sm" style="background-color: black;">
+      <div class="container-fluid">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" style="color: white;">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html" style="color: white;">My Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="resume.html" style="color: white;">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="form.html" style="color: white;" id="current">Contact Me</a>
+            </li>
+          </ul>
+      </div>
+    </nav>
+    
     <form style="margin: 25vh"> 
         <div class="mb-3">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
         </div>
         <div class="mb-3">
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Email">
+          <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
         </div>
         <div class="mb-3">
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Subject">
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Subject">
         </div>
         <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
         <button type="submit" class="btn" style="margin-top: 2vh; background-color: black; color: white;">Contact Me</button><br>
-      </form>
-
+    </form>
 
       <footer class="text-center text-white" style="background-color: black;">
         <!-- Grid container -->
