--- a/index.html
+++ b/index.html
@@ -23,34 +23,6 @@
       label{
         font-size: larger;
       }
-
-      .typewriter{
-        display: inline;
-        color: #007FFF;
-        font-size: 8vh;
-        overflow: hidden; /* Ensures the content is not revealed until the animation */
-        border-right: .15em solid #007FFF; /* The typwriter cursor */
-        white-space: nowrap; /* Keeps the content on a single line */
-        /* margin: 0 auto; Gives that scrolling effect as the typing happens */
-        letter-spacing: .10em; /* Adjust as needed */
-        animation: 
-          typing 2.5s steps(40, end),
-          blink-caret .75s step-end infinite;
-    }
-
-    /* The typing effect */
-    @keyframes typing {
-      from { width: 50% }
-      to { width: 100% }
-    }
-
-    /* The typewriter cursor effect */
-    @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: #007FFF ; }
-    }
-
-
     </style>
 </head>
 <body>
@@ -77,18 +49,17 @@
         <div class="row">
           <div class="col-sm" style="margin-top: 30vh;">
             <div style="font-size: 8vh;">
-              Hi, 
+              Hi,
             </div>
             <div style="font-size: 8vh;">
               <span style="white-space: nowrap;">
                 I'm
               </span>
-              <!-- <span style="display: inline; color: #007FFF ;" class="typewriter">
+              <span style="display: inline; color: #007FFF ;">
                 Hamza Asaad
-              </span> -->
-              <h1 style="display: inline;" class="typewriter">Hamza Asaad</h1>
+              </span>
             </div>
-            <div style="font-size: 6vh; padding-left: -100px;">
+            <div style="font-size: 6vh;">
               Bachelor of Computer Science
             </div>
           </div>
